feat: add new "force" flag for logical database deletion API (#501)
